feat: add GFX controllers and Dashboard Decorator Pattern